--- a/src/main/webapp/usuario/usuarioEditar.xhtml
+++ b/src/main/webapp/usuario/usuarioEditar.xhtml
@@ -77,11 +77,11 @@ and open the template in the editor.
                             <h:messages for="login"/>
 
                             <h:outputLabel value="Nova Senha:" for="novaSenha"/>
-                            <h:inputText id="novaSenha" label="Nova Senha" value="#{usuarioBean.novaSenha}" />
+                            <h:inputSecret id="novaSenha" label="Nova Senha" value="#{usuarioBean.novaSenha}" />
                             <h:messages for="novaSenha"/>
 
                             <h:outputLabel value="Confirma Senha:" for="confirmaSenha"/>
-                            <h:inputText id="confirmaSenha" label="Confirma Senha" value="#{usuarioBean.confirmaSenha}" />
+                            <h:inputSecret id="confirmaSenha" label="Confirma Senha" value="#{usuarioBean.confirmaSenha}" />
                             <h:messages for="confirmaSenha"/>
 
                         </h:panelGrid>
